Fix issue where dropdown text was not visible on Windows.

--- a/resources/assets/sass/components/_form.scss
+++ b/resources/assets/sass/components/_form.scss
@@ -46,6 +46,7 @@ input[type="file"] {
 
 // Select boxes
 select {
+  color: #000;
   margin-bottom: $base-spacing * 2;
 }
 
